idf_component_register(SRCS "Drv_8825_driver.c" "LedcPwm/LedcConfiguration.c"   "HardwareTimer/HardWareTimerConfiguration.c" "LedcPwm/Helper/LedcHelper.c" "PulseCounterConfiguration/PulseCounterConfig.c"
                    INCLUDE_DIRS "." "LedcPwm"  "HardwareTimer" "LedcPwm/Helper" "PulseCounterConfiguration" )
